[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
colored = "2"
proc-macro2 = { version =  "1", features = ["span-locations"]}
syn = { version = "2.0.39", features = ["full", "visit", "extra-traits"] }

[dev-dependencies]
or = { path = "../or" }

[lib]
proc-macro = true
