[package]
name = "or-rs-macros"
version = "0.1.0"
edition = "2021"
authors = ["Motoyuki Kimura <moymoymox@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mox692/or-rs"
description = """
or-rs's proc macros.
"""
categories = ["Development tools", "Parsing tools"]
keywords = ["either", "macro", "or"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
colored = "2"
proc-macro2 = { version =  "1", features = ["span-locations"]}
syn = { version = "2.0.39", features = ["full", "visit", "extra-traits"] }

[dev-dependencies]
or-rs = { path = "../or-rs" }

[lib]
proc-macro = true
