[package]
name = "or-rs-macros"
version = "0.1.0"
edition = "2021"
authors = ["Motoyuki Kimura <moymoymox@gmail.com>"]
readme = "README.md"
license = "MIT"
rust-version = "1.60"
repository = "https://github.com/mox692/or-rs"
description = """
or-rs's proc macros.
"""
categories = ["development-tools", "parsing"]
keywords = ["either", "macro", "or"]

[dependencies]
quote = "1"
colored = { version = "1", optional = true }
proc-macro2 = { version =  "1", optional = true }
syn = { version = "2.0", features = ["full"] }

[features]
default = ["proc-macro2"]
macro_error_debugging = ["colored", "proc-macro2/span-locations"]

[dev-dependencies]
or-rs = { path = "../or-rs" }

[lib]
proc-macro = true
