[package]
name = "or-rs"
version = "0.1.0"
edition = "2021"
authors = ["Motoyuki Kimura <moymoymox@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mox692/or-rs"
description = """
or-rs's enum types.
"""
categories = ["Development tools", "Parsing tools"]
keywords = ["either", "macro", "or"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
unstable_feature = []
