[package]
name = "or-rs"
version = "0.1.2"
edition = "2021"
authors = ["Motoyuki Kimura <moymoymox@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mox692/or-rs"
description = """
or-rs's enum types.
"""
categories = ["development-tools", "parsing"]
keywords = ["either", "macro", "or"]
rust-version = "1.60"

[dependencies]

[features]
default = []
unstable_feature = []
